--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
   <script type="importmap">
 {
   "imports": {
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "@tailwindcss/vite": "https://esm.sh/@tailwindcss/vite@^4.1.18",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "jszip": "https://esm.sh/jszip@^3.10.1"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "jszip": "https://esm.sh/jszip@^3.10.1",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@tailwindcss/vite": "https://esm.sh/@tailwindcss/vite@^4.1.18"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="antialiased h-screen overflow-hidden bg-gray-50 text-gray-900 transition-colors duration-300">
     <div id="root" class="h-full"></div>
-    <!-- 核心修复：显式引入入口文件，移除 importmap -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
